ruta relativa de imágenes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>HablaConmigo</h1>
-  <img src="/assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Fideos')" alt="Fideos">
+  <img src="./assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Fideos')" alt="Fideos">
  <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
   <script>
     function hablar(texto) {
