arreglando rutas para github pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HablaConmigo</title>
-<link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
   <h1>HablaConmigo</h1>
-  <img src="./assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Fideos')" alt="Fideos">
- <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
+  <img src="/assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Fideos')" alt="Fideos">
+  <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
   <script>
     function hablar(texto) {
       const utterance = new SpeechSynthesisUtterance(texto);
