trabajando en diseño responsivo

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
+    <div class="container">
   <h1>HablaConmigo</h1>
-  <img src="/assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Fideos')" alt="Fideos">
+  <img src="/assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Quiero fideos')" alt="Fideos">
+  <img src="/assets/img/pan.png" class="pictograma" onclick="hablar('Quiero pan')" alt="Pan">
+  <img src="/assets/img/galletas.png" class="pictograma" onclick="hablar('Quiero galletas')" alt="Galletas">
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
+</div>
   <script>
     function hablar(texto) {
       const utterance = new SpeechSynthesisUtterance(texto);
