--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>HablaConmigo</h1>
   <img src="/assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Quiero fideos')" alt="Fideos">
   <img src="/assets/img/pan.png" class="pictograma" onclick="hablar('Quiero pan')" alt="Pan">
-  <img src="/assets/img/galletas.png" class="pictograma" onclick="hablar('Quiero galletas')" alt="Galletas">
+  <img src="https://static.arasaac.org/pictograms/6525/6525_300.png" class="pictograma" onclick="hablar('Quiero galletas')" alt="Galletas">
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
 </div>
   <script>
