Cambio de imagen de auto en el menú principal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>HablaConmigo</h1>
         <a href="./comida/index.html"><img src="/public/comida.png" class="pictograma"  alt="Comida"></a>
         <a href="./emociones/index.html"><img src="/public/emociones.png" class="pictograma"  alt="Emociones"></a>
-        <a href="./viajes/index.html"><img src="/public/auto.jpeg" class="pictograma"  alt="Paseos"></a>
+        <a href="./viajes/index.html"><img src="/public/auto.png" class="pictograma"  alt="Paseos"></a>
         <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
       </div>
 </body>
