--- a/viajes/index.html
+++ b/viajes/index.html
@@ -12,7 +12,7 @@
   <a href="../index.html"><img src="/public/volver.png" class="pictograma"  alt="Volver"></a>
   <img src="/viajes/assets/img/auto.jpeg" class="pictograma" onclick="hablar('Quiero salir en el auto')" alt="Auto">
   <img src="/viajes/assets/img/Parque.png" class="pictograma" onclick="hablar('Quiero ir al parque')" alt="Parque">
-  <img src="/viajes/assets/img/perro.png" class="pictograma" onclick="hablar('Quiero sacar a pasear a la perra')" alt="Perro">
+  <img src="/viajes/assets/img/perro.png" class="pictograma" onclick="hablar('Quiero sacar a pasear a la perra que llevo dentro')" alt="Perro">
   <img src="/viajes/assets/img/caminar.png" class="pictograma" onclick="hablar('Quiero salir a caminar')" alt="Caminar">
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
 </div>
