--- a/comida/index.html
+++ b/comida/index.html
@@ -10,9 +10,14 @@
     <div class="container">
   <h1>HablaConmigo</h1>
   <a href="../index.html"><img src="/public/volver.png" class="pictograma"  alt="Volver"></a>
-  <img src="/comida/assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Quiero fideos')" alt="Fideos">
-  <img src="/comida/assets/img/pan.png" class="pictograma" onclick="hablar('Quiero pan')" alt="Pan">
-  <img src="https://static.arasaac.org/pictograms/6525/6525_300.png" class="pictograma" onclick="hablar('Quiero galletas')" alt="Galletas">
+  <img src="/comida/assets/img/fideos.jpeg" class="pictograma" onclick="hablar('Quiero comer fideos')" alt="Fideos">
+  <img src="/comida/assets/img/pan.png" class="pictograma" onclick="hablar('Quiero comer pan')" alt="Pan">
+  <img src="https://static.arasaac.org/pictograms/6525/6525_300.png" class="pictograma" onclick="hablar('Quiero comer galletas')" alt="Galletas">
+  <img src="/comida/assets/img/jugo.png" class="pictograma" onclick="hablar('Quiero tomar jugo')" alt="Jugo">
+  <img src="/comida/assets/img/yogurt.png" class="pictograma" onclick="hablar('Quiero comer yogurt')" alt="Yogurt">
+  <img src="/comida/assets/img/jugo.png" class="pictograma" onclick="hablar('Quiero tomar jugo')" alt="Jugo">
+  <img src="/comida/assets/img/platano.png" class="pictograma" onclick="hablar('Quiero comer un platano')" alt="Platano">
+  
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
 </div>
   <script>
