--- a/comida/index.html
+++ b/comida/index.html
@@ -17,7 +17,9 @@
   <img src="/comida/assets/img/yogurt.png" class="pictograma" onclick="hablar('Quiero comer yogurt')" alt="Yogurt">
   <img src="/comida/assets/img/jugo.png" class="pictograma" onclick="hablar('Quiero tomar jugo')" alt="Jugo">
   <img src="/comida/assets/img/platano.png" class="pictograma" onclick="hablar('Quiero comer un platano')" alt="Platano">
-  
+  <img src="/comida/assets/img/manzana.png" class="pictograma" onclick="hablar('Quiero comer una manzana')" alt="Manzana">
+  <img src="/comida/assets/img/naranja.png" class="pictograma" onclick="hablar('Quiero comer una naranja')" alt="Narnja">
+
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
 </div>
   <script>
