--- a/emociones/index.html
+++ b/emociones/index.html
@@ -11,6 +11,7 @@
   <h1>HablaConmigo</h1>
   <a href="../index.html"><img src="/public/volver.png" class="pictograma"  alt="Volver"></a>
   <img src="/emociones/assets/img/dolor_cabeza.png" class="pictograma" onclick="hablar('Me duele la cabeza')" alt="Dolor de cabeza">
+  <img src="/emociones/assets/img/dolor_pie.png" class="pictograma" onclick="hablar('Me duele el pie')" alt="Dolor de pie">
   <img src="/emociones/assets/img/dolor_diente.png" class="pictograma" onclick="hablar('Me duele un diente')" alt="Dolor de diente">
   <img src="/emociones/assets/img/dolor_estomago.png" class="pictograma" onclick="hablar('Me duele el estómago')" alt="Dolor de estómago">
   <img src="/emociones/assets/img/calor.png" class="pictograma" onclick="hablar('Tengo calor')" alt="Calor">
