--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="./comida/index.html"><img src="/public/comida.png" class="pictograma" alt="Comida"></a>
         <a href="./emociones/index.html"><img src="/public/emociones.png" class="pictograma" alt="Emociones"></a>
         <a href="./viajes/index.html"><img src="/public/auto.png" class="pictograma" alt="Paseos"></a>
+        <a href="./ayuda/index.html"><img src="/public/ayuda.png" class="pictograma" alt="Ayuda"></a>
         <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
     </div>
     <script>
