Agregar opción de volver abajo

--- a/ayuda/index.html
+++ b/ayuda/index.html
@@ -15,6 +15,7 @@
   <img src="/ayuda/assets/img/pantalón.png" class="pictograma" onclick="hablar('Quiero cambiarme el pantalón')" alt="Pantalón">
   <img src="/ayuda/assets/img/polera.png" class="pictograma" onclick="hablar('Quiero cambiarme la polera')" alt="polera">
   <img src="/ayuda/assets/img/ducha.png" class="pictograma" onclick="hablar('Quiero bañarme')" alt="ducha">
+  <a href="../index.html"><img src="/public/volver.png" class="pictograma"  alt="Volver"></a>
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
 </div>
   <script>
