--- a/comida/index.html
+++ b/comida/index.html
@@ -18,7 +18,7 @@
   <img src="/comida/assets/img/platano.png" class="pictograma" onclick="hablar('Quiero comer un plátano')" alt="Platano">
   <img src="/comida/assets/img/manzana.png" class="pictograma" onclick="hablar('Quiero comer una manzana')" alt="Manzana">
   <img src="/comida/assets/img/naranja.png" class="pictograma" onclick="hablar('Quiero comer una naranja')" alt="Narnja">
-
+  <a href="../index.html"><img src="/public/volver.png" class="pictograma"  alt="Volver"></a>
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
 </div>
   <script>
