--- a/emociones/index.html
+++ b/emociones/index.html
@@ -18,6 +18,7 @@
   <img src="/emociones/assets/img/frio.png" class="pictograma" onclick="hablar('Tengo frío')" alt="Frío">
   <img src="/emociones/assets/img/contento.png" class="pictograma" onclick="hablar('Estoy contento')" alt="Contento">
   <img src="/emociones/assets/img/triste.png" class="pictograma" onclick="hablar('Estoy triste')" alt="Triste">
+  <a href="../index.html"><img src="/public/volver.png" class="pictograma"  alt="Volver"></a>
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
 </div>
   <script>
