--- a/viajes/index.html
+++ b/viajes/index.html
@@ -16,6 +16,7 @@
   <img src="/viajes/assets/img/caminar.png" class="pictograma" onclick="hablar('Quiero salir a caminar')" alt="Caminar">
   <img src="/viajes/assets/img/escuela.png" class="pictograma" onclick="hablar('Quiero ir a la escuela')" alt="Escuela">
   <img src="/viajes/assets/img/trabajar.png" class="pictograma" onclick="hablar('Quiero ir a trabajar')" alt="Trabajar">
+  <a href="../index.html"><img src="/public/volver.png" class="pictograma"  alt="Volver"></a>
   <footer>HablaConmigo es una aplicación 100% gratuita creada por Raúl Rodríguez Clavero, 2025, Chile.</footer>
 </div>
   <script>
